# internal/handler/refresh_tokens_handler.go
@@ -7,8 +7,8 @@ import (
 )
 
 // GenerateRefreshTokensHandler godoc
-// @Summary      Generate new access and refresh tokens
-// @Description  Generates new access and refresh tokens using a provided refresh token
+// @Summary      Генерация новых токенов
+// @Description  Генерация refresh, access токенов
 // @Tags         Auth
 // @Accept       json
 // @Produce      json
@@ -16,7 +16,7 @@ import (
 // @Success      200   {object}  dto.TokensResponse "Tokens generated successfully"
 // @Failure      400   {object}  ErrorResponse "Invalid request body"
 // @Failure      500   {object}  ErrorResponse "Internal server error"
-// @Router       /auth/refresh-tokens [post]
+// @Router       /refresh [post]
 func (h *Handler) GenerateRefreshTokensHandler(w http.ResponseWriter, r *http.Request) {
 	var refreshToken dto.RefreshTokenRequest
 	if err := json.NewDecoder(r.Body).Decode(&refreshToken); err != nil {
