# internal/handler/sign_in_handler.go
@@ -8,8 +8,8 @@ import (
 )
 
 // SignInHandler godoc
-// @Summary      User Sign In
-// @Description  Authenticate a user with the provided sign-in data
+// @Summary      Вход в систему
+// @Description  Аутентификация пользователя по логину и паролю в системе
 // @Tags         Auth
 // @Accept       json
 // @Produce      json
@@ -17,7 +17,7 @@ import (
 // @Success      200   {nil}  nil  "Successfully signed in, no content"
 // @Failure      400   {object}  ErrorResponse  "Invalid input data"
 // @Failure      500   {object}  ErrorResponse  "Failed to sign in"
-// @Router       /auth/sign-in [post]
+// @Router       /sign-in [post]
 func (h *Handler) SignInHandler(w http.ResponseWriter, r *http.Request) {
 	var signInData model.SignInData
 
